syntax = "proto3";

option go_package = "github.com/Mojjedrengen/ChitChat/grpc/chitchat";

package chitchat;

service chat {
  rpc Connect(SimpleMessage) returns (stream ConnectRespond);
  rpc OnGoingChat(stream SimpleMessage) returns (stream ChatRespond);
  rpc Disconnect(SimpleMessage) returns (ChatRespond);
}

message User {
  string Uuid = 1;
}

message SimpleMessage {
  User User = 1;
  string Message = 2;
}

message Msg {
  User User = 1;
  int64 UnixTime = 2;
  string Message = 3;
  string error = 4;
}

message ConnectRespond {
  int32 StatusCode = 1;
  Msg Message = 2;
}

// Use HTTP response status code
message ChatRespond {
  int32 StatusCode = 1;
  string context = 2;
}
